--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,27 @@
+<! DOCTYPE html >
+< html >
+  < cabeza >
+    < meta  charset = " utf-8 " >
+    < título > Mi página de prueba </ título >
+    < link  href = " https://fonts.googleapis.com/css?family=Open+Sans " rel = " stylesheet " type = " text / css " >
+    < link  href = " styles / style.css " rel = " stylesheet " type = " text / css " >
+  </ cabeza >
+  < cuerpo >
+    < h1 > Mozilla es genial </ h1 >
+    < img  src = " images / firefox-icon.png " alt = " El logotipo de Firefox: un zorro en llamas rodeando la Tierra. " >
 
+    < p > En Mozilla, somos una comunidad global de </ p >
+
+    < ul >  <! - cambiado a la lista en el tutorial ->
+      < li > tecnólogos </ li >
+      < li > pensadores </ li >
+      < li > constructores </ li >
+    </ ul >
+
+    < p > trabajar juntos para mantener la Internet viva y accesible, de modo que personas de todo el mundo puedan ser contribuyentes y creadores informados de la Web. Creemos que este acto de colaboración humana a través de una plataforma abierta es esencial para el crecimiento individual y nuestro futuro colectivo. </ p >
+
+    < P > Lea el < un  href = " https://www.mozilla.org/en-US/about/manifesto/ " > Manifiesto de Mozilla </ a > para aprender aún más sobre los valores y principios que guían la búsqueda de nuestra misión. </ p >
+  < botón > Cambiar usuario </ botón >
+  < script  src = " scripts / main.js " > </ script >
+  </ cuerpo >
+</ html >
